Expand Mock AI requirement analysis